# wdn_optimization

./: .gitignore  README.md  mpc_visualization.py  pyproject.toml  simple_network_pyomo.py
.github/workflows/: python-tests.yml
data/: demand_response_events.json  simple_pump_tank_network_opt_params.json  soporon_network_opt_params.json
data/epanet_networks/: chapter_5_3_4_example.inp  dynamic_simple_model.inp  simple_pump_tank.inp  small_network_selek.inp  sopron_network.inp  tutorial_basic_model.inp
data/operational_data/: simple_pump_tank_network_demand_data.csv  sopron_network_reservoir_data.csv
data/tariffs/: example_tariff.csv
epanet_networks/: chapter_5_4_example.inp
src/: simple_nr.py
src/epanet_tutorial/: __init__.py  simple_nr.py  test_simple_nr.py  wdn_cvxpy.py  wdn_pyomo.py
src/mpc/: mpc_wrapper.py
src/utils/: utils.py
src/wdn_optimization/: __init__.py  simple_nr.py  wdn_cvxpy.py  wdn_pyomo.py
tests/: test_mpc_wrapper.py  test_simple_nr.py  test_wdn_cvxpy.py  test_wdn_pyomo.py
tests/data/simple_pump_tank/: simple_pump_tank_constraints_list.json  simple_pump_tank_network_demand_data.csv  simple_pump_tank_network_opt_params.json  tariff.csv
tests/data/simple_pump_tank_binary/: simple_pump_tank.inp  simple_pump_tank_constraints_list.json  simple_pump_tank_network_opt_params.json
tests/data/soporon/: soporon_constraints_list.json  soporon_network_demand_data.csv  soporon_network_opt_params.json  sopron_network.inp  sopron_network_pump_data.csv  sopron_network_reservoir_data.csv
