[project]
name = "epanet-tutorial"
version = "0.1.0"
description = "Adhi's tutorial for getting to know EPANET"
authors = [
    {name = "Adhithyan Sakthivelu",email = "admkr.2010@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "wntr (>=1.3.2,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (==1.26.4)",
    "marimo (>=0.13.11,<0.14.0)",
    "networkx[default] (>=3.4.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
