[project]
name = "wdn_optimization"
version = "1.0.0"
description = "Adhi's tutorial for getting to know EPANET"
authors = [
    {name = "Adhithyan Sakthivelu",email = "admkr.2010@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "wntr (>=1.3.2,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (==1.26.4)",
    "marimo (>=0.13.11,<0.14.0)",
    "networkx[default] (>=3.4.2,<4.0.0)",
    "pyomo (>=6.9.2,<7.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "pytest-cov (>=6.1.1,<7.0.0)",
    "electric-emission-cost (>=0.0.2,<0.0.3)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pylint (>=3.3.7,<4.0.0)",
    "gurobipy (>=12.0.3,<13.0.0)"
]

[tool.poetry]
packages = [
    { include = "wdn_optimization", from = "src" }
]

[tool.poetry.group.dev.dependencies]
bumpver = "^2024.1126"

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"src/wdn_optimization/__init__.py" = [
    '__version__ = "{version}"',
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

